--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,20 +6,19 @@ spring.datasource.password=root
 # hibernate properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
-
-logging.level.org.springframework.security=DEBUG
-
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type=TRACE
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# hibernate properties
+logging.level.org.springframework.security=DEBUG
+
+# To disable spring security
+#security.ignored=/**
+#security.basic.enabled=false
+#management.security.enabled=false
 
 # swagger-UI properties
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
 
-security.ignored=/**
-security.basic.enabled=false
-management.security.enabled=false
